--- a/latex/distributed_solver.tex
+++ b/latex/distributed_solver.tex
@@ -357,15 +357,9 @@ MPI\_Alltoallv is also a blocking collective: when the routine is called, all co
 Figure~\ref{fig:mpi_isendirecv_visual} shows a true all-to-subset collective implemented with direct sends and receives between processes that are either blocking (MPI\_Send, MPI\_Recv) or non-blocking (MPI\_Isend, MPI\_Irecv). Processes strictly communicate with required neighbors, so no zero-byte messages inflate communication time. 
 A blocking version of this all-to-subset was employed in our first paper (\cite{BolligFlyerErlebacher2012}) for debugging purposes. MPI sends and receives were issued in a round-robin fashion. Unfortunately, the serialized connections made it infeasible to target $p > 10$. 
 
-\authnote{FINISH: }
-The original benchmarks from the paper are included in Appendix~\ref{app:paper1_benchmarks}. In an effort to improve performance and scaling of our implementation an MPI\_Alltoallv was employed. Appendix~\ref{app:keeneland_spear_alltoallv_benchmarks} shows the impact of the improved collective running on Keeneland and Spear. Both appendices consider the scaling of a distributed RK4 iteration. 
+In an effort to improve performance and scaling of our implementation an MPI\_Alltoallv was employed. Appendix~\ref{app:keeneland_alltoallv_benchmarks} presents benchmarks of the improved collective running on Keeneland for comparison with our first paper. Appendix~\ref{app:spear_alltoallv_benchmarks} benchmarks the MPI\_Alltoallv collective on the FSU Spear cluster. Both appendices consider the scaling of the distributed SpMV on a small number of nodes.  
 
-In what follows the MPI\_Alltoallv implementation is taken as baseline for communication. Effort is then made to reduce communication times 
-
- benchmark a simple distributed SpMV and tune communication. Improvements here map 
-
-In the data that follows we employ non-blocking sends and receives for concurrent connections to multiple processors. A number of steps are taken to tune communication in order to span RBF-FD across 1024 processors.
-
+In what follows the MPI\_Alltoallv implementation is taken as baseline for communication. An attempt is then made to further communication times and improve the scaling of our implementation in a distributed CPU environment. By focusing on the CPU-only environment we can test scaling on moderately large $p$ (we go up to $p = 1024$). Improvements for distributed CPU scaling directly improve scaling of the distributed GPU implementation (see Chapter~\ref{chap:multigpu_rbffd}). 
 
 \section{Scaling Results} 
 \label{sec:cpu_scaling}
@@ -400,7 +394,7 @@ Figure~\ref{fig:mpi_tuning} illustrates a number of communication collectives at
 \begin{subfigure}{0.6\textwidth}
 \centering
 \includegraphics[width=\textwidth]{../figures/omnigraffle/IsendPreIrecvCPU.pdf}
-\caption{Post MPI\_Irecv ASAP (``Pre-Recv")}
+\caption{Post an MPI\_Irecv before SpMV (``Pre-Recv")}
 \label{fig:preirecv_cpu}
 \end{subfigure}
 \begin{subfigure}{0.6\textwidth}
@@ -422,9 +416,17 @@ Figure~\ref{fig:mpi_tuning} illustrates a number of communication collectives at
 \begin{figure}
 \centering
 \includegraphics[width=0.6\textwidth]{performance_content/scaling/weak_scaling_np4000_compare_SpMV_and_comm_n50.png}
-\caption{Weak scaling comparison for $n=50$ and $N_p = 4000$ on a regular grid with maximum resolution $N=4096000$ on Itasca.}
+\caption{Weak scaling comparison for $n=50$ and $N_p = 4000$ on a 3D regular grid with maximum resolution $N=4096000$ on Itasca.}
 \label{fig:compare_weak_scaling_n50}
 \end{figure}
+
+\begin{figure}
+\centering
+\includegraphics[width=0.6\textwidth]{performance_content/scaling/strong_scaling_4M_compare_SpMV_and_comm_n50.png}
+\caption{Strong scaling comparison for $n=50$ and $N = 4096000$ on a 3D regular grid on Itasca.}
+\label{fig:compare_strong_scaling_n50}
+\end{figure}
+
 
 %
 %\begin{figure}
@@ -451,6 +453,37 @@ Figure~\ref{fig:mpi_tuning} illustrates a number of communication collectives at
 \caption{Weak scaling and efficiency comparison for various stencil sizes ($n=17, 31, 50, 101$) and $N_p = 4000$ on a regular grid with maximum resolution $N=4096000$ on Itasca. } 
 \label{fig:weak_scaling_all_stencils}
 \end{figure}
+
+
+\begin{figure}
+\centering
+\begin{subfigure}{0.6\textwidth}
+\centering
+\includegraphics[width=\textwidth]{performance_content/scaling/strong_scaling_4M_overlap_cpu_SpMV_and_comm_all_stencils.png}
+\caption{Scaling (All Stencils)}
+\label{fig:compare_strong_scaling_all_stencils}
+\end{subfigure}
+\begin{subfigure}{0.6\textwidth}
+\centering
+\includegraphics[width=\textwidth]{performance_content/scaling/strong_scaling_speedup_4M_overlap_cpu_SpMV_and_comm_all_stencils.png}
+\caption{Speedup ($S_p = \ ^{t_{1}}/_{t_p}$)}
+\label{fig:compare_strong_scaling_efficiency_all_stencils}
+\end{subfigure}
+\begin{subfigure}{0.6\textwidth}
+\centering
+\includegraphics[width=\textwidth]{performance_content/scaling/strong_scaling_efficiency_4M_overlap_cpu_SpMV_and_comm_all_stencils.png}
+\caption{Efficiency ($E_p = \ ^{t_{1}}/_{p*t_p} $)}
+\label{fig:compare_strong_scaling_efficiency_all_stencils}
+\end{subfigure}
+\caption{Strong scaling comparison for various stencil sizes ($n=17, 31, 50, 101$) and $N_p = 4000$ on a regular grid with maximum resolution $N=4096000$ on Itasca. } 
+\label{fig:weak_scaling_all_stencils}
+\end{figure}
+
+%#	performance_content/scaling/strong_scaling_4M_overlap_cpu_SpMV_and_comm_all_stencils.png
+%#	performance_content/scaling/strong_scaling_efficiency_4M_compare_SpMV_and_comm_n50.png
+%#	performance_content/scaling/strong_scaling_efficiency_4M_overlap_cpu_SpMV_and_comm_all_stencils.png
+%#	performance_content/scaling/strong_scaling_speedup_4M_compare_SpMV_and_comm_n50.png
+%#	performance_content/scaling/strong_scaling_speedup_4M_overlap_cpu_SpMV_and_comm_all_stencils.png
 
 
 Our implementation is now demonstrated to be scalable. The term scalable is used loosely here as two types of scaling are possible: weak and strong. Weak scaling monitors the growth in run-time as the number of processes ($p$) increases with the per process workload, $N_p$, kept constant; in other words the global problem size grows as $N = p*N_p$. Strong scaling keeps a fixed global problem size to consider $N_p = \frac{N}{p}$, where processes are issued diminishing workloads as $p$ grows. 
@@ -572,24 +605,8 @@ In Figure~\ref{fig:strong_scaling} the strong scaling of $N=10^6$ nodes is teste
 \caption{Weak scaling of the SpMV}
 \end{figure}
 
-\begin{figure}
-\centering
-\includegraphics[width=0.6\textwidth]{performance_content/scaling/weak_scaling_np4000_regular_n17_compare.png}
-\caption{Weak scaling of the SpMV}
-\end{figure}
 
-\begin{figure}
-\centering
-\includegraphics[width=0.6\textwidth]{performance_content/scaling/weak_scaling_np4000_regular_n17_compare_commOnly.png}
-\caption{Communication times for weak scaling SpMV. The difference between MPI\_Alltoallv and MPI\_Irecv times is attributed to the overhead in checking for zero-byte messages for the large number of processors. Similar behavior for MPI\_Alltoallv is found in \cite{Balaji2010}.}
-\end{figure}
 
-\begin{figure}
-\centering
-\includegraphics[width=0.6\textwidth]{performance_content/scaling/strong_scaling_4M_regular_isend.png}  
-\includegraphics[width=0.6\textwidth]{performance_content/scaling/weak_scaling_np4000_regular_isend.png}  
-\caption{Scaling of SpMV with MPI\_Isend/MPI\_Irecv}
-\end{figure}
 
 \section{Conclusion}
 
