Nearly done with this chapter

--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,20 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-10-11 23:53:58 -0500 
+%% Created for Evan Bollig at 2013-10-13 14:28:31 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{ItascaTuning,
+	Author = {David Porter},
+	Date-Added = {2013-10-13 18:56:35 +0000},
+	Date-Modified = {2013-10-13 19:28:31 +0000},
+	Howpublished = {Tutorial Slides, \url{http://msi.umn.edu/~porter/tutorials/old1/Itasca_fin2.pdf}},
+	Title = {{Itasca's IB Fabric}},
+	Year = {2009}}
 
 @misc{Tuminaro1995,
 	Author = {Ray S. Tuminaro and John N. Shadid and Scott A. Hutchinson},
