--- a/latex/distributed_solver.tex
+++ b/latex/distributed_solver.tex
@@ -359,70 +359,160 @@ A blocking version of this all-to-subset was employed in our first paper (\cite{
 
 In an effort to improve performance and scaling of our implementation an MPI\_Alltoallv was employed. Appendix~\ref{app:keeneland_alltoallv_benchmarks} presents benchmarks of the improved collective running on Keeneland for comparison with our first paper. Appendix~\ref{app:spear_alltoallv_benchmarks} benchmarks the MPI\_Alltoallv collective on the FSU Spear cluster. Both appendices consider the scaling of the distributed SpMV on a small number of nodes.  
 
-In what follows the MPI\_Alltoallv implementation is taken as baseline for communication. An attempt is then made to further communication times and improve the scaling of our implementation in a distributed CPU environment. By focusing on the CPU-only environment we can test scaling on moderately large $p$ (we go up to $p = 1024$). Improvements for distributed CPU scaling directly improve scaling of the distributed GPU implementation (see Chapter~\ref{chap:multigpu_rbffd}). 
+In what follows the MPI\_Alltoallv implementation is taken as baseline for communication. An attempt is then made to further reduce communication times and improve the scaling of our implementation in a distributed CPU environment. By focusing on the CPU-only environment we can test scaling on moderately large $p$ (we go up to $p = 1024$). Scaling improvements for the CPU-only environment similarly improve the distributed GPU implementation (see Chapter~\ref{chap:multigpu_rbffd}). 
 
-\section{Scaling Results} 
+\section{Scaling Improvements} 
 \label{sec:cpu_scaling}
 
 
-%TODO: Itasca scaling to demonstrate behavior as 
-The scalability of our implementation is tested in distributed CPU mode  on the Itasca HPC cluster at the University of Minnesota. Owned and operated by the Minnesota Supercomputing Institute, the Itasca cluster is \authnote{finish}
+Two types of scaling are considered: weak and strong. Weak scaling monitors the growth in run-time as the number of processes ($p$) increases with the per process workload, $N_p$, kept constant; in other words the global problem size grows as $N = p*N_p$. Strong scaling keeps a fixed global problem size to consider $N_p = \frac{N}{p}$, where processes are issued diminishing workloads as $p$ grows. 
+The scalings reveal different properties:
+\begin{itemize} 
+\item Weak scaling demonstrates the ability run problem sizes that are too large for a single CPU. Ideal weak scaling implies that the total run-time remains constant as additional parallelism is added. %Growth in run-time under weak-scaling most can problems with communication and ghost node load imbalances. 
+\item Strong scaling finds the point at which the cost of communication overcomes the cost of computation. Ideal strong scaling is linear in terms of speedup (i.e., $S_p = p$), but to achieve it is unrealistic due to the serial cost of communication. 
+\end{itemize}
+ 
 
-Figure~\ref{fig:mpi_tuning} illustrates a number of communication collectives attempted. Each of the tiles, \ref{fig:alltoallv_cpu} -- \ref{fig:overlap_cpu}, show a progression of improvement and effort to tune the communication for a large cluster. The progression occurred as follows:  
-\begin{enumerate} 
-\item The entire SpMV for $\setCenters$ is executed, followed by a blocking MPI\_Alltoallv collective (Figure~\ref{fig:alltoallv_cpu}).
-\item The MPI\_Alltoallv is replaced by non-blocking MPI\_Isend/MPI\_Irecv (Figure~\ref{fig:isendirecv_cpu}).
-\item MPI\_Irecv is issued \emph{before} starting the SpMV to ensure MPI\_Isends have pending connections when ready (Figure~\ref{fig:preirecv_cpu}). 
-\item Based on the assumption that elements of $\setDepend$ are sorted contiguous by neighboring process, the entire decode process is skipped (Figure~\ref{fig:no_decode_cpu}). 
-\item MPI\_Irecv and MPI\_Isend are issued before computing the SpMV for set $\setCenters \backslash \setBoundary$. The process waits for communication to finish before launching the second SpMV on $\setBoundary$. This hides some of the cost for communication behind computation on the CPU (Figure~\ref{fig:overlap_cpu}). 
-\end{enumerate}
+For both scalings we benchmark 4000 iterations RBF-FD derivative calculation. The input grid is assumed to be a 3D regular grid and various stencil sizes are tested. Weak scaling considers $N_p=4000$ per processor. Strong scaling considers $N=4096000$ (i.e., $N=160^3$) nodes. Timings are reported for total execution time for a distributed SpMV, as well as per-component times for computation and communication only.
+
+
+The benchmark is run on the Itasca HPC cluster at the University of Minnesota (Minnesota Supercomputing Institute). Itasca has 1,134HP ProLiant blade servers, each with two-socket, quad-core 2.8 GHz Intel Xeon processors. Each compute node has at least 24GB of RAM. Itasca has a total of 8,744 cores available for computing with a total usable memory size of 31.3 TB \cite{MSIItasca}. 
+
+Itasca's InfiniBand network topology is a 2-way fat-tree network. Each compute node, with 8 cores, is considered a \emph{leaf} of the fat-tree. Processes within a leaf communicate via shared memory. Groups of 16 nodes connect via QDR InfiniBand to \emph{leaf switches} at the second level of the tree. All leaf switches are in turn connected to two director nodes via 4x QDR InfiniBand. The topology exhibits 8:1 contention between nodes of the same leaf and additional 2:1 contention between leaf switches \cite{ItascaTuning}. Our implementation of RBF-FD does not detect or adjust to the topology, so network contention can have a pronounced effect on communication times.
+
+\subsection{Baseline: MPI\_Alltoallv}
+
+As a baseline for discussion, consider Figure~\ref{fig:strong_scaling_alltoallv} which shows the strong scaling achieved on Itasca with an MPI\_Alltoallv collective. The average execution times for the distributed SpMV are provided in Figure~\ref{fig:strong_scaling_alltoallv_all_stencils} with corresponding speedups relative to the single process execution in Figure~\ref{fig:strong_scaling_speedup_alltoallv_all_stencils}. For $p <= 8$ the scaling is poor due to the growing number of processes on the same compute node contending for shared memory. The code scales well (i.e., nearly linear) between 8 and 128 processes, but the gains taper off beyond $p > 128$. Per-component data for the MPI\_Alltoallv test case in Figures~\ref{fig:strong_scaling_spmv_only_alltoallv_all_stencils} and \ref{fig:strong_scaling_comm_only_alltoallv_all_stencils} reveals the expected linear decrease in computation for $p>8$, and eventually the communication time exceeding computation time at $p \geq 128$. 
+
 
 \begin{figure} 
 \centering
-\begin{subfigure}{0.6\textwidth}
+\begin{subfigure}{0.48\textwidth}
+\centering
+\includegraphics[width=\textwidth]{performance_content/scaling/strong_scaling_4M_regular_alltoallv.png}  
+\caption{Strong scaling}
+\label{fig:strong_scaling_alltoallv_all_stencils}
+\end{subfigure}
+\begin{subfigure}{0.48\textwidth}
+\centering
+\includegraphics[width=\textwidth]{performance_content/scaling/strong_scaling_4M_regular_alltoallv_speedup.png}
+\caption{Speedup ($S_p = \ ^{t_{1}}/_{t_p}$)}
+\label{fig:strong_scaling_speedup_alltoallv_all_stencils}
+\end{subfigure}
+\caption{Strong scaling of the distributed SpMV on $N=4096000$ nodes (i.e., a $160^3$ regular grid) and various stencil sizes. Communication handled by MPI\_Alltoallv. }
+\label{fig:strong_scaling_alltoallv}
+\end{figure}
+
+\begin{figure} 
+\centering
+\begin{subfigure}{0.48\textwidth}
+\centering
+\includegraphics[width=\textwidth]{performance_content/scaling/strong_scaling_4M_regular_spmvOnly.png}
+\caption{SpMV only}
+\label{fig:strong_scaling_spmv_only_alltoallv_all_stencils}
+\end{subfigure}
+\begin{subfigure}{0.48\textwidth}
+\centering
+\includegraphics[width=\textwidth]{performance_content/scaling/strong_scaling_4M_regular_alltoallv_commOnly.png} \caption{MPI\_Alltoallv only}
+\label{fig:strong_scaling_comm_only_alltoallv_all_stencils}
+\end{subfigure}
+\caption{Per-component benchmarks of strong scaling benchmarks for $N=4096000$ nodes. Communication time outweighs computation time for $p>128$ processes.  }
+\label{fig:per_component_strong_scaling_alltoallv}
+\end{figure}
+
+
+ Based on Figure~\ref{fig:weak_scaling_comm_only_alltoallv_all_stencils} the MPI\_Alltoallv weak scaling is poor. As $p$ grows, the total time grows at a super-linear rate. Figure~\ref{fig:weak_scaling_spmv_only_alltoallv_all_stencils}, which shows the SpMV time only, verifies that beyond the initial growth in time on a single compute node the SpMV is constant for all stencil sizes. That then implies the cost of communication must be reduced (or hidden). 
+
+\begin{figure}
+\centering
+\begin{subfigure}{0.48\textwidth}
+\centering
+\includegraphics[width=\textwidth]{performance_content/scaling/weak_scaling_np4000_regular_alltoallv.png}\caption{Weak Scaling}
+\label{fig:weak_scaling_comm_only_alltoallv_all_stencils}
+\end{subfigure}
+%\begin{subfigure}{0.48\textwidth}
+%\centering
+%\includegraphics[width=\textwidth]{performance_content/scaling/weak_scaling_np4000_regular_alltoallv_commOnly.png}
+%\caption{MPI\_Alltoallv only}
+%\label{fig:weak_scaling_comm_only_alltoallv_all_stencils}
+%\end{subfigure}
+\begin{subfigure}{0.48\textwidth}
+\centering
+\includegraphics[width=\textwidth]{performance_content/scaling/weak_scaling_np4000_regular_spmvOnly.png}
+\caption{SpMV only}
+\label{fig:weak_scaling_spmv_only_alltoallv_all_stencils}
+\end{subfigure}
+\caption{Weak scaling of the SpMV. Increasing time for the SpMV reflects shared memory contention for processes on the same compute node (i.e., $p\leq 8$). Poor weak scaling is the result of growing communication times. }
+\end{figure}
+
+
+\subsection{Improvements}
+
+
+Figure~\ref{fig:mpi_tuning} illustrates a progression of collectives tested in an effort to improve weak scaling. 
+
+Each tile of Figure~\ref{fig:mpi_tuning} shows a timeline for the distributed SpMV. Vertical bars separate the SpMV in focus from execution of the next and last SpMV. Our implementation does not assume a global barrier before starting the next iteration, so load balancing is essential to limit wait times between processors. Operations are concurrent from top to bottom within each tile, and the top-most operations are launched first.
+
+%The distributed GPU implementation in Chapter~\ref{chap:multigpu_rbffd} is based on the collective in Figure~\ref{fig:overlap_cpu}. 
+
+\begin{figure} 
+\centering
+\begin{subfigure}{0.48\textwidth}
 \centering
 \includegraphics[width=\textwidth]{../figures/omnigraffle/AlltoallvCPU.pdf}
 \caption{MPI\_Alltoallv}
 \label{fig:alltoallv_cpu}
 \end{subfigure}
-\begin{subfigure}{0.6\textwidth}
+\begin{subfigure}{0.48\textwidth}
 \centering
 \includegraphics[width=\textwidth]{../figures/omnigraffle/IsendIrecvCPU.pdf}
 \caption{MPI\_Isend/MPI\_Irecv}
 \label{fig:isendirecv_cpu}
 \end{subfigure}
-\begin{subfigure}{0.6\textwidth}
+\begin{subfigure}{0.48\textwidth}
 \centering
 \includegraphics[width=\textwidth]{../figures/omnigraffle/IsendPreIrecvCPU.pdf}
 \caption{Post an MPI\_Irecv before SpMV (``Pre-Recv")}
 \label{fig:preirecv_cpu}
 \end{subfigure}
-\begin{subfigure}{0.6\textwidth}
+\begin{subfigure}{0.48\textwidth}
 \centering
 \includegraphics[width=\textwidth]{../figures/omnigraffle/NoDecode.pdf}
 \caption{No Decode}
 \label{fig:no_decode_cpu}
 \end{subfigure}
-\begin{subfigure}{0.6\textwidth}
+\begin{subfigure}{0.48\textwidth}
 \centering
 \includegraphics[width=\textwidth]{../figures/omnigraffle/OverlapCPU.pdf}
 \caption{Overlapping SpMV and Communication}
 \label{fig:overlap_cpu}
 \end{subfigure}
-\caption{MPI tuning steps to scale from 10 processors in \cite{BolligFlyerErlebacher2012} to 1024 processors here. Each horizontal timeline indicates the order of operations for a single distributed SpMV (i.e., between vertical bars). Concurrent operations are launched from top to bottom. } 
+\caption{MPI tuning steps to scale from 10 processors in \cite{BolligFlyerErlebacher2012} to 1024 processors here. Each horizontal timeline indicates the order of operations for a single distributed SpMV (i.e., between vertical bars). } 
 \label{fig:mpi_tuning}
 \end{figure}
 
+
+Tuning occurred as follows for the $n=50$ node stencil case and $N_p=4000$ nodes per process:  
+\begin{enumerate} 
+\item The entire SpMV for $\setCenters$ is executed, followed by a blocking MPI\_Alltoallv collective (Figure~\ref{fig:alltoallv_cpu}). This is the baseline discussed above.
+\item The MPI\_Alltoallv is replaced by non-blocking MPI\_Isend/MPI\_Irecv (Figure~\ref{fig:isendirecv_cpu}).
+\item MPI\_Irecv is issued \emph{before} starting the SpMV to ensure MPI\_Isends have pending connections when ready (Figure~\ref{fig:preirecv_cpu}). Posting the non-blocking receives early helps hide some load balancing issues. 
+\item Based on the assumption that elements of $\setDepend$ are sorted contiguous by neighboring process, the entire decode process is skipped (Figure~\ref{fig:no_decode_cpu}). 
+\item MPI\_Irecv and MPI\_Isend are issued before computing the SpMV for set $\setCenters \backslash \setBoundary$. MPI\_Isend is non-blocking so the SpMV for $\setCenters \backslash \setBoundary$ starts before communication is complete. A barrier at the end of the first SpMV waits for communication to finish before launching the second SpMV on $\setBoundary$. This hides some cost of communication behind computation on the CPU (Figure~\ref{fig:overlap_cpu}). 
+\end{enumerate}
+
+A comparison of weak scaling performance for the sequence of on $n=50$ 
+
 \begin{figure}
 \centering
-\includegraphics[width=0.6\textwidth]{performance_content/scaling/weak_scaling_np4000_compare_SpMV_and_comm_n50.png}
+\includegraphics[width=0.48\textwidth]{performance_content/scaling/weak_scaling_np4000_compare_SpMV_and_comm_n50.png}
 \caption{Weak scaling comparison for $n=50$ and $N_p = 4000$ on a 3D regular grid with maximum resolution $N=4096000$ on Itasca.}
 \label{fig:compare_weak_scaling_n50}
 \end{figure}
 
 \begin{figure}
 \centering
-\includegraphics[width=0.6\textwidth]{performance_content/scaling/strong_scaling_4M_compare_SpMV_and_comm_n50.png}
+\includegraphics[width=0.48\textwidth]{performance_content/scaling/strong_scaling_4M_compare_SpMV_and_comm_n50.png}
 \caption{Strong scaling comparison for $n=50$ and $N = 4096000$ on a 3D regular grid on Itasca.}
 \label{fig:compare_strong_scaling_n50}
 \end{figure}
@@ -431,20 +521,20 @@ Figure~\ref{fig:mpi_tuning} illustrates a number of communication collectives at
 %
 %\begin{figure}
 %\centering
-%\includegraphics[width=0.6\textwidth]{performance_content/scaling/weak_scaling_np4000_overlap_cpu_SpMV_and_comm_all_stencils.png}
+%\includegraphics[width=0.48\textwidth]{performance_content/scaling/weak_scaling_np4000_overlap_cpu_SpMV_and_comm_all_stencils.png}
 %\caption{Weak scaling comparison for various stencil sizes ($n=17, 31, 50, 101$) and $N_p = 4000$ on a regular grid with maximum resolution $N=4096000$ on Itasca.}
 %\label{fig:compare_weak_scaling_n50}
 %\end{figure}
 
 \begin{figure}
 \centering
-\begin{subfigure}{0.6\textwidth}
+\begin{subfigure}{0.48\textwidth}
 \centering
 \includegraphics[width=\textwidth]{performance_content/scaling/weak_scaling_np4000_overlap_cpu_SpMV_and_comm_all_stencils.png}
 \caption{Scaling (All Stencils)}
 \label{fig:compare_weak_scaling_all_stencils}
 \end{subfigure}
-\begin{subfigure}{0.6\textwidth}
+\begin{subfigure}{0.48\textwidth}
 \centering
 \includegraphics[width=\textwidth]{performance_content/scaling/weak_scaling_efficiency_np4000_overlap_cpu_SpMV_and_comm_all_stencils.png}
 \caption{Efficiency}
@@ -457,19 +547,19 @@ Figure~\ref{fig:mpi_tuning} illustrates a number of communication collectives at
 
 \begin{figure}
 \centering
-\begin{subfigure}{0.6\textwidth}
+\begin{subfigure}{0.48\textwidth}
 \centering
 \includegraphics[width=\textwidth]{performance_content/scaling/strong_scaling_4M_overlap_cpu_SpMV_and_comm_all_stencils.png}
 \caption{Scaling (All Stencils)}
 \label{fig:compare_strong_scaling_all_stencils}
 \end{subfigure}
-\begin{subfigure}{0.6\textwidth}
+\begin{subfigure}{0.48\textwidth}
 \centering
 \includegraphics[width=\textwidth]{performance_content/scaling/strong_scaling_speedup_4M_overlap_cpu_SpMV_and_comm_all_stencils.png}
 \caption{Speedup ($S_p = \ ^{t_{1}}/_{t_p}$)}
 \label{fig:compare_strong_scaling_efficiency_all_stencils}
 \end{subfigure}
-\begin{subfigure}{0.6\textwidth}
+\begin{subfigure}{0.48\textwidth}
 \centering
 \includegraphics[width=\textwidth]{performance_content/scaling/strong_scaling_efficiency_4M_overlap_cpu_SpMV_and_comm_all_stencils.png}
 \caption{Efficiency ($E_p = \ ^{t_{1}}/_{p*t_p} $)}
@@ -486,15 +576,6 @@ Figure~\ref{fig:mpi_tuning} illustrates a number of communication collectives at
 %#	performance_content/scaling/strong_scaling_speedup_4M_overlap_cpu_SpMV_and_comm_all_stencils.png
 
 
-Our implementation is now demonstrated to be scalable. The term scalable is used loosely here as two types of scaling are possible: weak and strong. Weak scaling monitors the growth in run-time as the number of processes ($p$) increases with the per process workload, $N_p$, kept constant; in other words the global problem size grows as $N = p*N_p$. Strong scaling keeps a fixed global problem size to consider $N_p = \frac{N}{p}$, where processes are issued diminishing workloads as $p$ grows. 
-
-The two scalings reveal different properties:
-\begin{itemize} 
-\item Weak scaling demonstrates the ability target problem sizes that would not typically fit in memory on a single CPU. Ideal weak scaling implies that as $p$ grows the run-time remains constant. Growth in time for weak-scaling indicates either the 
-\item Strong scaling considers the point at which the cost of communication overcomes the cost of computation. Ideal strong scaling is linear in terms of speedup (i.e., $S_p = p$), but to achieve it is nearly impossible due to the serial cost of communication. As the number of process grows, the cost of communication eventually outweighs the cost of computation. 
-\end{itemize}
- 
-
 
 
 Possible causes for the growth: 
@@ -503,6 +584,7 @@ Possible causes for the growth:
 \item Processor workloads are not balanced. Similar to the comparison in \S~\ref{sec:load_balance}, we test the ratio of ghost node counts on $p=1024$ ($n=17$) and find  $\frac{\min N_r}{\max N_r} = 0.39$. The low ratio confirms suspicions that communication loads are imbalanced. 
 \item The underlying network fabric on Itasca limits communication scaling. The QDR-Inifiband network on Itasca is a two-way fat-tree with non-blocking communication in groups of 16 \authnote{nodes/cores?}. 
 \item Send and receive buffers are no properly aligned \authnote{see intel/IBM articles for proposed alignment benefits}. 
+\item Need to shuffle machine file for best use of topology
 \end{itemize}
 
 %TODO: 
@@ -580,32 +662,6 @@ At this point scaling the code allows us to reach a higher number of nodes. To c
 %The aggregate bandwidth reveals when processes saturate the interconnects. 
 
 
-In Figure~\ref{fig:strong_scaling} the strong scaling of $N=10^6$ nodes is tested on Itasca, a supercomputer at the Minnesota Supercomputing Institute.   
-
-\begin{figure} 
-\centering
-\includegraphics[width=0.45\textwidth]{performance_content/scaling/strong_scaling_4M_regular_alltoallv.png}  
-\includegraphics[width=0.45\textwidth]{performance_content/scaling/strong_scaling_4M_regular_alltoallv_speedup.png} \\
-\includegraphics[width=0.45\textwidth]{performance_content/scaling/strong_scaling_4M_regular_spmvOnly.png}
-\includegraphics[width=0.45\textwidth]{performance_content/scaling/strong_scaling_4M_regular_alltoallv_commOnly.png} 
-\caption{Strong scaling the distributed SpMV for $N=4096000$ nodes (i.e., a $160^3$ regular grid) and various stencil sizes. Here the MPI\_Alltoallv collective operation is used. (Left) Strong scaling of SpMV (including cost of communication). (Center) Strong scaling of computation only. (Right) Strong scaling of communication only.}
-\end{figure}
-
-\begin{figure}
-\centering
-\includegraphics[width=0.6\textwidth]{performance_content/scaling/strong_scaling_4M_regular_n17comparison_commOnly.png}
-\caption{Scaling comparison of MPI\_Alltoallv and two types of MPI\_Isend/MPI\_Irecv collectives: one with MPI\_Irecv issued after filling the MPI\_Isend send buffer (post-fill), and the other issued before filling the MPI\_Isend buffer (pre-fill).}
-\end{figure}
-
-\begin{figure}
-\centering
-\includegraphics[width=0.6\textwidth]{performance_content/scaling/weak_scaling_np4000_regular_alltoallv_commOnly.png}
-\includegraphics[width=0.6\textwidth]{performance_content/scaling/weak_scaling_np4000_regular_spmvOnly.png} 
-\includegraphics[width=0.6\textwidth]{performance_content/scaling/weak_scaling_np4000_regular_alltoallv.png}
-\caption{Weak scaling of the SpMV}
-\end{figure}
-
-
 
 
 \section{Conclusion}
@@ -630,7 +686,7 @@ As part of the future investigations we anticipate the need to consider the impa
 
 
 \cite{Lawlor2009}
-
+%TODO: \cite{Goeddeke2009} \cite{Erez2007}
 
 Distributing SpMV across multiple GPUs poses a new problem: as previous mentioned, the data sent and received via MPI collectives must be copied from device to host and vice-versa. To amortize this cost we introduce a novel overlapping algorithm to hide the cost of communication behind the cost of a concurrent SpMV on the GPU. 
 
