--- a/latex/performance_content/hardware.tex
+++ b/latex/performance_content/hardware.tex
@@ -1,5 +1,39 @@
 %!TEX root = karen.tex
 
+
+\chapter{Test Environments}
+
+Benchmarks in this work were run on a number of platforms. We provide here a summary of hardware specifications.
+
+\section{GPUs}
+
+%TODO: Memory size
+%TODO: Bandwidth
+%TODO: Peak GFLOPs (double)
+%TODO: Number of cores
+%TODO: Number of multiprocessors
+
+\subsubsection{NVidia M2070}
+
+\subsubsection{NVidia M2090}
+
+\subsubsection{NVidia K20}
+
+
+\section{Clusters}
+
+\subsubsection{Itasca (UMN)}
+The Itasca HPC cluster at the Minnesota Supercomputing Institute.
+Itasca is an HPLinux cluster with 1,134HP ProLiant blade servers, each with two-socket, quad-core 2.8 GHz Intel Xeon processors sharing at least 24GB of RAM \cite{MSIItasca}.
+
+\subsubsection{Spear (FSU)}
+
+\subsubsection{Keeneland}
+
+
+
+
+
 %We present our implementation of an efficient multi-node, multi-GPU RBF PDE package to run on clusters of GPU compute nodes. Each compute node has one or more GPUs attached. Specifically, we utilize the hardware available in the FSU HPC Spear cluster and the NFS funded Keeneland project. While the Spear cluster is only a handful of nodes with 2 GPUs each, Keeneland boasts a total of 240 CPUs and 320 GPUs. The large scale of Keeneland allows us to verify the scaling of our method. 
 
 %TODO: describe each generation of hardware 
